Update notebook. Fix r scripts

--- a/notebooks/harPeripleo.ipynb
+++ b/notebooks/harPeripleo.ipynb
@@ -134,6 +134,18 @@
     }
    ],
    "source": [
+    "# Check if packages exist and if not install them for use\n",
+    "packages <- c(\"readr\",\"jsonlite\")\n",
+    "any_not_installed <- !all(packages %in% installed.packages()[, \"Package\"])\n",
+    "if (any_not_installed) {\n",
+    "  # Code to execute if at least one package is not installed\n",
+    "  message(\"At least one of the packages is not installed.\")\n",
+    "  # Install missing packages\n",
+    "  missing_packages <- packages[!(packages %in% installed.packages()[, \"Package\"])]\n",
+    "  if (length(missing_packages) > 0) {\n",
+    "    install.packages(missing_packages)\n",
+    "  }\n",
+    "} \n",
     "# Download data from the Digital Planning page in csv format\n",
     "library(readr)\n",
     "rawdata <- read.csv('https://files.planning.data.gov.uk/dataset/heritage-at-risk.csv')\n",
