Add latest notebooks

--- a/notebooks/harPeripleo.ipynb
+++ b/notebooks/harPeripleo.ipynb
@@ -1552,30 +1552,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "99efa7a3-d38a-47c9-9b1e-b297488f5cf2",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Attaching package: 'dplyr'\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:stats':\n",
-      "\n",
-      "    filter, lag\n",
-      "\n",
-      "\n",
-      "The following objects are masked from 'package:base':\n",
-      "\n",
-      "    intersect, setdiff, setequal, union\n",
-      "\n",
-      "\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -2005,9 +1985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "id": "548bd274-f4a8-44ed-b013-a6d5695b129f",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2079,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "fded2ea0-35b6-4967-bb7b-3b9cda574ba5",
    "metadata": {},
    "outputs": [
@@ -2167,7 +2149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "b9870c2e-bcc1-4508-954e-de5fe3e855a5",
    "metadata": {},
    "outputs": [
@@ -2282,7 +2264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "id": "07bd3e53-0127-4eae-b3bd-1e79cf922a9a",
    "metadata": {},
    "outputs": [
@@ -2613,11 +2595,14 @@
     "      html_nodes(css_selector) %>% \n",
     "      html_text() %>% \n",
     "      paste(collapse = \" \")\n",
-    "    \n",
     "    list(url = url, reference = reference, text_content = text_content) \n",
     "  }, error = function(e) {\n",
     "    message(sprintf(\"Failed to scrape %s: %s\", url, e$message))\n",
     "    list(url = url, reference = reference, text_content = NA, error = e$message) \n",
+    "  }, finally = {\n",
+    "    # Garbage collection within the function\n",
+    "    closeAllConnections()\n",
+    "    gc() # Call garbage collection after each URL is processed\n",
     "  })\n",
     "}\n",
     "\n",
@@ -2631,11 +2616,7 @@
     "\n",
     "# Separate successful and failed scrapes\n",
     "successful_scrapes <- scraped_data_df %>% filter(!is.na(text_content)) %>% select(-error)\n",
-    "failed_scrapes <- scraped_data_df %>% filter(is.na(text_content))\n",
-    "\n",
-    "# Write failed results to CSV file\n",
-    "write_csv(failed_scrapes, \"./csv/scraping_errors.csv\") \n",
-    "# You might want these for reference."
+    "failed_scrapes <- scraped_data_df %>% filter(is.na(text_content))"
    ]
   },
   {
@@ -3210,7 +3191,11 @@
     "head(scraped_data_df)\n",
     "\n",
     "# Write the scraped data to a new CSV file\n",
-    "write_csv(scraped_data_df, \"./csv/scraped_data.csv\") \n"
+    "write_csv(scraped_data_df, \"./csv/scraped_data.csv\") \n",
+    "\n",
+    "# Write failed results to CSV file\n",
+    "write_csv(failed_scrapes, \"./csv/scraping_errors.csv\") \n",
+    "# You might want these for reference."
    ]
   },
   {
