--- a/notebooks/harPeripleo.ipynb
+++ b/notebooks/harPeripleo.ipynb
@@ -3208,10 +3208,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 30,
    "id": "73824f59-f99d-488e-860d-d1add7881ba1",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "── \u001b[1mAttaching core tidyverse packages\u001b[22m ──────────────────────────────────────────────────────────────── tidyverse 2.0.0 ──\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mforcats  \u001b[39m 1.0.0     \u001b[32m✔\u001b[39m \u001b[34mstringr  \u001b[39m 1.5.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mggplot2  \u001b[39m 3.5.1     \u001b[32m✔\u001b[39m \u001b[34mtibble   \u001b[39m 3.2.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mlubridate\u001b[39m 1.9.4     \u001b[32m✔\u001b[39m \u001b[34mtidyr    \u001b[39m 1.3.1\n",
+      "\u001b[32m✔\u001b[39m \u001b[34mpurrr    \u001b[39m 1.0.2     \n",
+      "── \u001b[1mConflicts\u001b[22m ────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m  masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mpurrr\u001b[39m::\u001b[32mflatten()\u001b[39m masks \u001b[34mjsonlite\u001b[39m::flatten()\n",
+      "\u001b[31m✖\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m     masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\u001b[36mℹ\u001b[39m Use the conflicted package (\u001b[3m\u001b[34m<http://conflicted.r-lib.org/>\u001b[39m\u001b[23m) to force all conflicts to become errors\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3329,6 +3345,25 @@
     "\n",
     "# Read the CSV file\n",
     "df <- read_csv('./csv/scraped_data.csv', col_types = cols(.default = \"c\"))\n",
+    "\n",
+    "# Remove words with : straight after\n",
+    "\n",
+    "remove_castle_before_location <- function(text) {\n",
+    "  # Replace \"Castle:\" with \"Castle\"\n",
+    "  text <- gsub(\"Castle:\", \"Castle\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Walls:\", \"Walls\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"walls:\", \"walls\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Abbey:\", \"Abbey\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Cross:\", \"Cross\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Mines:\", \"Mines\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Mine:\", \"Mine\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Mill:\", \"Mill\", text, fixed = TRUE)\n",
+    "  text <- gsub(\"Whitfield:\", \"Whitfield\", text, fixed = TRUE)\n",
+    "  return(text)\n",
+    "}\n",
+    "\n",
+    "df <- df %>% \n",
+    "  mutate(text_content = sapply(text_content, remove_castle_before_location))\n",
     "\n",
     "# Function to split text_content into key-value pairs\n",
     "split_text_content <- function(text) {\n",
